--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,7 +113,7 @@ body {
                 margin-top: 2em;
             }
 
-            span {
+            div {
                 margin: 1em 0;
 
                 @include medium {
